test(UM): add basic CRUD tests
