# core/services/user-management/apiDoc/openapi.yml
@@ -8,7 +8,7 @@ tags:
   - name: users
     description: Operations about users
   - name: userImages
-    description: Access to user image. Only PNG and JPEG supported.
+    description: Operations on users image. Only PNG and JPEG supported.
 paths:
   /users:
     parameters:
@@ -39,7 +39,8 @@ paths:
       summary: Get list of users
       description: To get the list of users you can specify projection with `fields` paramter and set the
         page size with `pageSize`. Default page size is **30**. The next page can be fatched by using `cursor`
-        parameter. The cursor to the next page will be included in the response body
+        parameter. The cursor to the next page will be included in the response body. There is nore further pages, if
+        the `cursor` is not included in the response
       operationId: getUsers
       parameters:
         - name: fields
@@ -48,6 +49,7 @@ paths:
           required: false
           explode: true
           allowReserved: true
+          example: "username,email,creationDate"
           schema:
             type: string
         - name: cursor
@@ -74,13 +76,20 @@ paths:
                 type: object
                 properties:
                   collectionSize:
+                    description: Number of users returned in current response
                     type: integer
                   collection:
                     type: array
+                    description: The array of users objects
                     items:
                       $ref: "#/components/schemas/UserResponse"
                   cursor:
                     type: string
+                    description: Cursor to the next page. Set the returned cursor as `cursor` query parameter in the
+                      next request to retrive following page
+                  total:
+                    description: Total number of users that could be returned by current query
+                    type: number
         "400":
           $ref: "#/components/responses/RequestValidationError"
         "500":
@@ -152,7 +161,7 @@ paths:
       requestBody:
         $ref: "#/components/requestBodies/UsersPatch"
       responses:
-        "204":
+        "200":
           $ref: "#/components/responses/SuccessEmpty"
         "400":
           $ref: "#/components/responses/RequestValidationError"
@@ -544,10 +553,11 @@ components:
       pattern: "^user:uuid:[0-9a-f]{8}-[0-9a-f]{4}-[0-5][0-9a-f]{3}-[089ab][0-9a-f]{3}-[0-9a-f]{12}$"
 
     UserResponse:
-      title: UserResponse
-      description: User Response schema
+      title: User response
+      description: User response with essential attributes. For full list of possible attributes pleease refer to
+        te corresponsing schema.
       type: object
-      additionalProperties: false
+      additionalProperties: true
       properties:
         username:
           type: string
@@ -562,7 +572,7 @@ components:
         imageUrl:
           type: string
           description: URL to external profile image
-        creationDate:
+        created:
           type: string
           format: date-time
           description: User creation date
@@ -648,7 +658,7 @@ components:
   parameters:
     actoridParam:
       in: header
-      description: The id of the origin that produces action/message. Can be a user or service
+      description: The id of the origin that produces action/message. Can be an user or a service
       name: x-actorid
       schema:
         type: string
